app/style.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;   
}

.color{
    background-color: #4EA695;
    background-color: hsl(168, 36%, 48%);
    color: #4EA695;
    color: hsl(168, 36%, 48%);
    border-color: #4EA695;
    border-color: hsl(168, 36%, 48%); 
}

.color-light {
    border-color: #000000 !important;
    border-color: rgba(0,0,0,0.15) !important;
}

html {
    font-family: 'Open Sans', sans-serif;
    font-size: 100%;
    font-weight: normal;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    
}

html.color {
    color: #888888 !important;
}

header {
    text-align: center;
    -webkit-animation: fadeIn 1s ease-out both 0.5s;
    -moz-animation: fadeIn 1s ease-out both 0.5s;
    -o-animation: fadeIn 1s ease-out both 0.5s;
    animation: fadeIn 1s ease-out both 0.5s;
}

h1,h2,h3,h4,h5,h6 {
    font-weight: 300;
}

a {
    background: none;
    text-decoration: none;
}

.link {
    display: inline-block;
    overflow: hidden;
    vertical-align: top;
    -webkit-perspective: 600px;
    -moz-perspective: 600px;
    -ms-perspective: 600px;
    -o-perspective: 600px;
    perspective: 600px;
    -webkit-perspective-origin: 50% 50%;
    -moz-perspective-origin: 50% 50%;
    -ms-perspective-origin: 50% 50%;
    -o-perspective-origin: 50% 50%;
    perspective-origin: 50% 50%;
}

.link > span {
    display: block;
    position: relative;
    padding: 0 0.25em;
    -webkit-transition: all 400ms ease;
    -moz-transition: all 400ms ease;
    -ms-transition: all 400ms ease;
    -o-transition: all 400ms ease;
    transition: all 400ms ease;
    -webkit-transform-origin: 50% 0;
    -moz-transform-origin: 50% 0;
    -ms-transform-origin: 50% 0;
    -o-transform-origin: 50% 0;
    transform-origin: 50% 0;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
    -o-transform-style: preserve-3d;
    transform-style: preserve-3d;
}

.link:hover > span,
.link:focus > span,
.link:active > span {
    -webkit-transform: translate3d( 0, 0, -30px ) rotateX( 90deg );
    -moz-transform: translate3d( 0, 0, -30px ) rotateX( 90deg );
    -ms-transform: translate3d( 0, 0, -30px ) rotateX( 90deg );
    -o-transform: translate3d( 0, 0, -30px ) rotateX( 90deg );
    transform: translate3d( 0, 0, -30px ) rotateX( 90deg );
}

.link > span:after {
    content: attr(data-title);
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    padding: 0 0.25em;
    color: #FFFFFF;
    -webkit-transform-origin: 50% 0;
    -moz-transform-origin: 50% 0;
    -ms-transform-origin: 50% 0;
    -o-transform-origin: 50% 0;
    transform-origin: 50% 0;
    -webkit-transform: translate3d( 0, 105%, 0 ) rotateX( -90deg );
    -moz-transform: translate3d( 0, 105%, 0 ) rotateX( -90deg );
    -ms-transform: translate3d( 0, 105%, 0 ) rotateX( -90deg );
    -o-transform: translate3d( 0, 105%, 0 ) rotateX( -90deg );
    transform: translate3d( 0, 105%, 0 ) rotateX( -90deg );
}

.link:hover > span,
.link:focus > span,
.link:active > span,
.link > span:after {
    background: #4EA695;
}

a,input[type="submit"],
input[type="text"],
.button {
    border: 0;
    border-radius: 2px;
    -webkit-transition: all .25s ease;
    -moz-transition: all .25s ease;
    -ms-transition: all .25s ease;
    -o-transition: all .25s ease;
    transition: all .25s ease;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

input[type="submit"],
.button {
    width: 100%;
    display: block;
    padding: .5em;
    margin: 0 0 .5em;
    font-size: 1.5em;
    font-weight: 300;
    text-align: center;
    color: #000000 !important;
    color: rgba(0,0,0,0.25) !important;
}

input[type="submit"]:hover,
input[type="submit"]:focus,
.button:hover,.button:focus {
    color: #fff !important;
}

.button:active {
    -webkit-transform: translate(0,5px);
    -moz-transform: translate(0,5px);
    -ms-transform: translate(0,5px);
    -o-transform: translate(0,5px);
    transform: translate(0,5px);
}

hr {
    border-width: 1px 0 0 0;
}

/* p,li {
    font-size: .875em;
} */

pre,code {
    border-radius: 2px;
    border: 1px solid #ddd;
    background-color: #F8F8F8;
    background-color: rgba(248,248,248,0.8);
}

pre {
    padding: .75em 1em;
    font-size: 1em;
    line-height: 1.1875em;
    overflow: auto;
    margin: 2em 0;
}

code {
    margin: 0 .125em;
    padding: 0 .3125em;
    white-space: nowrap;
}

form {
    position: relative;
    margin: 1em 0;
    z-index: 2;
}

input[type="text"] {
    border: 1px solid #ddd;
    background-color: #FFFFFF;
    background-color: rgba(255,255,255,0.8);
    padding: .5em;
    padding-right: 27%;
    width: 100%;
}

input[type="text"]:focus {
    outline: 0;
    border-color: transparent;
    box-shadow: 0 0 5px #3bc4a8;
    box-shadow: 0 0 5px hsl(168, 54%, 50%);
    background-color: #FFFFFF;
    background-color: rgba(255,255,255,1);
}

input[type="text"]:focus + input[type="submit"] {
    border-color: white;
}

input[type="submit"] {
    border-radius: 0 2px 2px 0;
    width: 25%;
    height: 100%;
    margin: 0;
    position: absolute;
    top: 0;
    right: 0;
    border: 1px solid #ddd;
    border-width: 1px 1px 1px 0;
    font-size: 1em;
}

.text-only {
    position: relative;
    background-color: transparent !important;
    border-color: transparent !important;
    z-index: 2;
}

.background-only {
    color: inherit !important;
}

.container {
    max-width: 38em;
    padding: 0 2em;
    margin: 0 auto 5em;
}

.header em,
.title{
    color: #FFFFFF;
}

.title {
    font-size: 4.5em;
    letter-spacing: 1px;
}

.subheading {
    font-size: 2em;
    margin: 1.5em 0 0;
}

.links {
    margin: 3em auto 0;
    text-align: center;
}

.main {
    position: relative;
    padding-top: 1em;
    background-color: #FFFFFF;
    z-index: 10;
    height: 100%;
 }

.selector {
    color: #d55061;
}

.keyword {
    color: #007fc9;
}

.value {
    color: #009e73;
}

.library {
    color: #e6ca00;
}

.error {
    color: #d14;
}

.truncate {
    position: relative;
    color: #888888;
    margin: 6em 0;
    font-style: italic;
}

.truncate:before,
.truncate:after {
    position: absolute;
    display: block;
    font-size: 10em;
    font-family: 'Nosifer', cursive;
    color: #dfdfdf;
    color: rgba(136,136,136,0.25);
    z-index: 1;
}

.truncate:before {
    top: -0.75em;
    left: -0.15em;
    content: '\201C';
}

.truncate:after {
    bottom: -1.3em;
    right: .15em;
    content: '\201D';
}

.attribution {
    font-size: .875em;
    text-align: center;
}

@media only screen and (min-width:542px) {

    .header { 
        position: fixed;
        z-index: 1;  /* sets it below the other slides in the layer stack */
        height: 100%;
        width: 100%;
        top: 0;
        left: 0;
    }

    .header .container {
        position: absolute;
        top: 50%;
        left: 50%;
        margin: -10.0625em 0 0 -19em;
        width: 100%;
    }

    .title {
        margin-top: 0;
        line-height: 1;
    }
    
    .main {
        margin-top: 100%;
    }

    .button {
        width: 40%;
        display: inline-block;
        margin: 0 .5em;
    }
}

@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-moz-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@-o-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

